아이템에 유저 추가중

--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 카테고리 추가
 상품 등록시 카테고리 선택
 상품 등록시 자기 유저 선택
+javaConfig로 넘어가기
 
 -----------------------------------------------------------------------
 
